# parus

./: .gitignore  CMakeLists.txt  README.md  a.out  install.sh  main  main.pr  run.sh  uninstall.sh
backend/: CMakeLists.txt
backend/docs/: Backend.md  README.md
backend/llvmconfig/: CMakeLists.txt
compiler/: CMakeLists.txt
compiler/parusc/: CMakeLists.txt
frontend/: CMakeLists.txt
frontend/docs/: README.md
tests/: CMakeLists.txt  test  usecase.txt
tests/cases/: case10_field_ok.gpel  case11_acts_ok.gpel  case12_cap_borrow_ok.gpel  case12_cap_borrow_ok.pr  case13_cap_escape_ok.gpel  case14_cap_call_temp_mut_ok.gpel  case15_array_unsized_decl_ok.gpel  case17_slice_borrow_read_ok.pr  case18_slice_borrow_mut_ok.pr  case19_namedgroup_slice_borrow_ok.gpel  case1_var.pr  case20_static_escape_ok.gpel  case21_namedgroup_array_cap_mix_ok.gpel  case22_escape_call_boundary_ok.gpel  case23_do_scope_ok.pr  case24_do_while_ok.gpel  case25_borrow_rebind_owner_ok.pr  case2_fn_namedgroup.gpel  case3_loop.pr  case4_if.gpel  case6_cast_as.gpel  case9_null_coalesce_assign.gpel  err_acts_member_export_not_allowed.gpel  err_ambiguous_amp_prefix_chain.gpel  err_array_size_invalid_literal.gpel  err_array_size_mismatch.gpel  err_block_tail_expr_required.gpel  err_call_mixed_labeled_namedgroup.gpel  err_call_no_args_after_named_group.gpel  err_cap_borrow_not_place.gpel  err_cap_do_while_cond_escape_move.gpel  err_cap_escape_not_place.gpel  err_cap_escape_on_borrow.gpel  err_cap_escape_on_borrow.pr  err_cap_escape_requires_static_or_boundary.gpel  err_cap_mut_conflict_live.gpel  err_cap_mut_conflict_with_shared.pr  err_cap_mut_direct_access.gpel  err_cap_mut_requires_mutable_place.gpel  err_cap_return_borrow.pr  (+17 more)
tests/ffi/: README.md  export_to_c.pr  export_to_c_main.c  extern_arith.pr  extern_arith_wrapper.c  extern_global_counter.pr  extern_global_counter_wrapper.c  hello_printf.pr  hello_printf_wrapper.c
tests/frontend_cases/: README.md  err_actor_brace_init_not_allowed.pr  err_actor_commit_outside_pub.pr  err_actor_copy_handle_not_allowed.pr  err_actor_deinit_not_allowed.pr  err_actor_duplicate_draft.pr  err_actor_escape_draft_move_not_allowed.pr  err_actor_member_let_set_not_allowed.pr  err_actor_method_mode_required.pr  err_actor_missing_draft.pr  err_actor_path_call_removed.pr  err_actor_pub_missing_top_level_commit.pr  err_actor_recast_outside_sub.pr  err_actor_self_field_access_use_draft.pr  err_acts_conflicting_selection_same_scope.pr  err_acts_dot_without_self.pr  err_acts_for_not_supported.pr  err_acts_generic_trailing_clause_removed.pr  err_acts_member_export_not_allowed.pr  err_acts_member_stmt.pr  err_acts_named_without_use.pr  err_array_size_invalid_literal.pr  err_binding_with_acts_prefix_legacy.pr  err_block_tail_expr_required.pr  err_call_mixed_labeled_namedgroup.pr  err_call_no_args_after_named_group.pr  err_cap_do_while_cond_escape_move.pr  err_cap_escape_in_pure.pr  err_cap_escape_not_place.pr  err_cap_escape_on_borrow.pr  err_cap_escape_on_slice_borrow.pr  err_cap_escape_requires_static_or_boundary.pr  err_cap_mut_direct_access.pr  err_cap_return_borrow.pr  err_cap_use_after_escape_move.pr  err_cap_while_cond_escape_move.pr  err_catch_binder_name_expected.pr  err_class_ctor_missing_init.pr  err_class_inherit_class_forbidden.pr  err_class_keyword_removed_tablet.pr  (+129 more)
tests/fuzz/: fuzz_parser_incremental.cpp  fuzz_parser_smoke.cpp
tests/harness/: run_cli_option_tests.cpp  run_ffi_tests.cpp  run_frontend_integration_tests.cpp  run_goir_mlir_tests.cpp  run_goir_tests.cpp  run_oir_llvm_tests.cpp  run_oir_tests.cpp  run_parlib_tests.cpp  run_parser_ast_golden_tests.cpp  run_parser_crash_tests.cpp  run_parser_incremental_merge_tests.cpp  run_parser_stress_tests.cpp  run_parser_tests.cpp  run_parus_cli_tests.cpp  run_parus_config_tests.cpp  run_parusd_lsp_tests.cpp  run_prt_tests.cpp
tests/incremental_merge_cases/: ok_merge_basic.pr  ok_merge_calls.pr  ok_merge_nested_blocks.pr
tests/oir_cases/: case10_named_acts_use.pr  case11_acts_explicit_path_call.pr  case12_acts_named_same_signature_ok.pr  case13_acts_default_and_fq_owner_ok.pr  case14_binding_with_acts_postfix_nested_alias.pr  case15_nest_static_path.pr  case16_use_nest_alias.pr  case17_macro_add_expr.pr  case18_macro_item_stmt_mix.pr  case1_index_read.pr  case2_index_write.pr  case3_loop_index_mix.pr  case4_static_escape_mix.pr  case5_namedgroup_array.pr  case6_function_overload_basic.pr  case7_operator_overload_basic.pr  case8_overload_operator_mix.pr  case9_nullable_lift_and_coalesce.pr
tests/parser/: cap_static_borrow_escape_mix.gpel  cap_static_borrow_escape_mix.pr  err_minimal.gpel  fn_namegroup.gpel  fn_namegroup.pr  minimal.pr  ok_minimal copy.gpel  ok_minimal.gpel  ok_minimal.pr  sema_smoke.gpel  sema_smoke.pr  test.gpel  test.pr
tests/parser_ast_golden_cases/: README.md  ok_array_cast_chain.ast  ok_array_cast_chain.pr  ok_field_init_call_index.ast  ok_field_init_call_index.pr  ok_if_block_loop_cast.ast  ok_if_block_loop_cast.pr  ok_named_group_defaults.ast  ok_named_group_defaults.pr  ok_precedence_ternary.ast  ok_precedence_ternary.pr  ok_var_consume_else.ast  ok_var_consume_else.pr
tests/parser_cases/: MIGRATION_REPORT.md  README.md  case10_field_ok.pr  case13_cap_escape_ok.pr  case14_cap_call_temp_mut_ok.pr  case16_array_sized_decl_ok.pr  case18_slice_borrow_mut_ok.pr  case19_namedgroup_slice_borrow_ok.pr  case20_static_escape_ok.pr  case21_namedgroup_array_cap_mix_ok.pr  case22_escape_call_boundary_ok.pr  case25_borrow_rebind_owner_ok.pr  case26_manual_stmt_ok.pr  case27_nullable_lift_let_call_return_ok.pr  case28_field_optional_lift_ok.pr  case29_acts_explicit_default_path_ok.pr  case2_fn_namedgroup.pr  case30_acts_fq_owner_path_ok.pr  case31_nest_static_path_ok.pr  case4_if.pr  case5_while.pr  case6_cast_as.pr  case7_cast_as_optional.pr  case8_cast_as_force.pr  case9_null_coalesce_assign.pr  err_actor_decl_missing_semicolon.pr  err_actor_deinit_not_allowed.pr  err_actor_duplicate_draft.pr  err_actor_escape_draft_move_not_allowed.pr  err_actor_member_let_set_not_allowed.pr  (+269 more)
tools/: CMakeLists.txt
(+716 files in other folders)
